@@ -3893,3 +3893,5 @@ Changelog for GXemul:
 		the virtual memory space. (Note that this can have side
 		effects, when reading from devices...)
 		Implementing the 'copy' command, for cloning components.
+20090718	Updating the man page to reflect new command line options vs
+		legacy options.
